--- a/5_TR_Threaded_Nomenclature_Checker.ipynb
+++ b/5_TR_Threaded_Nomenclature_Checker.ipynb
@@ -882,12 +882,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 151,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pickle\n",
+    "### import pickle\n",
     "\n",
     "pickle.dump( results, open( \"nomenclature_approved.pkl\", \"wb\" ) )"
    ]
