no overlap on graphed nodes

--- a/TR_0.1_Pubmed_w2v_molecule_associations.ipynb
+++ b/TR_0.1_Pubmed_w2v_molecule_associations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,13 +338,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def molecular_graph(center_molecule, mol_list, file_out='mol_graph.png'):\n",
     "    import pygraphviz as pgv   \n",
-    "    mol_graph = pgv.AGraph()                         #Create AGraph object\n",
+    "    mol_graph = pgv.AGraph(strict=False, overlap=False, splines='spline')                        #Create AGraph object\n",
     "\n",
     "    for mol in mol_list:\n",
     "        if mol != center_molecule:\n",
@@ -359,9 +359,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'approved' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-b083dd6616b7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmolecular_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'TP53'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mapproved\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_out\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'TP53_mol_graph.png'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'approved' is not defined"
+     ]
+    }
+   ],
    "source": [
     "molecular_graph('TP53', approved, file_out='TP53_mol_graph.png')"
    ]
