update to network crawl--generations do re-hit old nodes

--- a/TR_0.1_Pubmed_w2v_molecule_associations.ipynb
+++ b/TR_0.1_Pubmed_w2v_molecule_associations.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gensim\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "# Setup nltk corpora path and Pubmed Word2Vec location\n",
     "pubmed_vec_file = '/Users/timrand/nltk_data/corpora/PubMed-w2v.bin'"
@@ -330,19 +332,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
     "#1. enter a molecule.\n",
     "#2. get w2v associated molecules.\n",
     "#3. create parent:child relationships\n",
+    "import math\n",
+    "\n",
     "class Molecule:\n",
     "    def __init__(self, name, parent=None):\n",
     "        self.name = name\n",
     "        self.children = []\n",
     "        self.parent = parent\n",
-    "    \n",
+    "        self.generation = len(self.trace_lineage())\n",
+    "        \n",
     "    def list_parent(self):\n",
     "        return self.parent\n",
     "    \n",
@@ -351,110 +356,94 @@
     "    \n",
     "    def make_babies(self):\n",
     "        #can only make babies once\n",
-    "        if self.children == [] and len(self.lineage()) <= 2:\n",
-    "            new_children_names = model.most_similar(self.name, topn=20)\n",
+    "        if self.children == []:\n",
+    "            new_children_names = model.most_similar(self.name, topn=math.floor(self.generation-4)**2-2)\n",
     "            new_children_names = [x[0] for x in new_children_names]\n",
     "            approved_names, _,_ = bin_approve_fail_notFound(new_children_names)\n",
     "            self.children = [Molecule(approved_name, parent=self) for approved_name in approved_names]\n",
     "        return self.children\n",
     "        \n",
-    "    def lineage(self):\n",
+    "    def trace_lineage(self):\n",
     "        ancestry = []\n",
     "        pointer = self.parent\n",
     "        while pointer != []:\n",
     "            ancestry.append(self.parent)\n",
     "            pointer = pointer.list_parent()\n",
     "        return ancestry\n",
-    "\n",
+    "    \n",
+    "    \n",
     "            \n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = Molecule('TP53', parent=[])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 243,
-   "metadata": {},
+   "execution_count": 374,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 243,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.make_babies()\n",
-    "a.children[0].lineage()[0].lineage()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/timrand/anaconda3/lib/python3.7/site-packages/gensim/matutils.py:737: FutureWarning: Conversion of the second argument of issubdtype from `int` to `np.signedinteger` is deprecated. In future, it will be treated as `np.int64 == np.dtype(int).type`.\n",
-      "  if np.issubdtype(vec.dtype, np.int):\n"
+      "HRAS 0\n",
+      "TP53 0\n",
+      "PIK3CA 0\n",
+      "RB1 0\n",
+      "KRAS 0\n",
+      "FBXW7 0\n",
+      "CTNNB1 0\n",
+      "BRAF 0\n",
+      "CDKN2A 0\n",
+      "IDH2 1\n",
+      "TP53 1\n",
+      "ARID1A 1\n",
+      "PIK3CA 1\n",
+      "IDH1 1\n",
+      "CTNNB1 1\n",
+      "CDKN2A 1\n",
+      "CDKN2A 2\n",
+      "KRAS 2\n"
      ]
     }
    ],
    "source": [
-    "ch = [Molecule(x[0], parent='TP53') for x in model.most_similar('TP53', topn=20)]"
+    "a = Molecule('TP53', parent=[])\n",
+    "#print(a.generation, a.name)\n",
+    "\n",
+    "kid_5 = a.make_babies()\n",
+    "for c in a.children:\n",
+    "    print(c.name, 0)\n",
+    "#print(kid_5.generation, kid_5.name)\n",
+    "grand_kids = kid_5[5].make_babies()\n",
+    "\n",
+    "for c in grand_kids:\n",
+    "    print(c.name,1 )\n",
+    "    \n",
+    "great_grand_kids = grand_kids[1].make_babies()\n",
+    "for c in great_grand_kids:\n",
+    "    print(c.name,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<__main__.Molecule at 0x1a9685d1d0>,\n",
-       " <__main__.Molecule at 0x1a9685d2e8>,\n",
-       " <__main__.Molecule at 0x1a9685dd68>,\n",
-       " <__main__.Molecule at 0x1a9685d6d8>,\n",
-       " <__main__.Molecule at 0x1a96859ef0>,\n",
-       " <__main__.Molecule at 0x1a96859f28>,\n",
-       " <__main__.Molecule at 0x1a96859dd8>,\n",
-       " <__main__.Molecule at 0x1a96859e48>,\n",
-       " <__main__.Molecule at 0x1a96859f98>,\n",
-       " <__main__.Molecule at 0x1a96859da0>,\n",
-       " <__main__.Molecule at 0x1a96859d68>,\n",
-       " <__main__.Molecule at 0x1a96859d30>,\n",
-       " <__main__.Molecule at 0x1a96859cf8>,\n",
-       " <__main__.Molecule at 0x1a96859cc0>,\n",
-       " <__main__.Molecule at 0x1a96859c88>,\n",
-       " <__main__.Molecule at 0x1a96859c50>,\n",
-       " <__main__.Molecule at 0x1a96859c18>,\n",
-       " <__main__.Molecule at 0x1a96859be0>,\n",
-       " <__main__.Molecule at 0x1a96859ba8>,\n",
-       " <__main__.Molecule at 0x1a96859b70>]"
+       "1"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ch"
+    "math.floor(1.3)"
    ]
   },
   {
